# Personal-Assistant

./: .gitignore  .pdm-python  Pipfile  README.md  dockerfile  pyproject.toml
src/: dev_db_2_model.py  main.py  pa.db  scheduler.py
src/dao/: _base.py  dao.py
src/model/: __init__.py  _temp_model.py  model.py
src/parser/: parser_by_re.py
src/requests/: _requests.py
src/schema/: __init__.py  common.py  model.py
